defconfig ; sweet : Enable CPU Boost

--- a/arch/arm64/configs/sweet_defconfig
+++ b/arch/arm64/configs/sweet_defconfig
@@ -133,6 +133,7 @@ CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_BIG=50000
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT_BIG=20
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_LITTLE=50000
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT_LITTLE=20
+CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
